src/App.css
@font-face {
  font-family: "SegoeUI";
  src: url("../public/fonts/SegoeUI.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

.btnWrapper {
  width: 100vw;
  display: flex;
  justify-content: center;
}

@font-face {
  font-family: "SegoeUIBold";
  src: url("../public/fonts/SegoeUIBold.woff") format("woff");
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: "SegoeUIItalic";
  src: url("../public/fonts/SegoeUIItalic.woff") format("woff");
  font-weight: normal;
  font-style: italic;
}

@font-face {
  font-family: "SegoeUIBoldItalic";
  src: url("../public/fonts/SegoeUIBoldItalic.woff") format("woff");
  font-weight: 700;
  font-style: italic;
}

* {
  margin: 0;
  padding: 0;
}

body {
  background-color: #182151;
}

#myBtn {
  z-index: 99;
  position: fixed; /* Fixed/sticky position */
  bottom: 5%; /* Place the button at the bottom of the page */
  right: 5%; /* Place the button 30px from the right */ /* Make sure it does not overlap */
  border: none; /* Remove borders */
  outline: none; /* Remove outline */
  background-color: red; /* Set a background color */
  color: white; /* Text color */
  cursor: pointer; /* Add a mouse pointer on hover */
  padding: 15px; /* Some padding */
  border-radius: 30px; /* Rounded corners */
  font-size: 18px; /* Increase font size */
}

#myBtn:hover {
  background-color: #555; /* Add a dark-grey background on hover */
}

#downBtn {
  z-index: 99;
  position: fixed; /* Fixed/sticky position */
  top: 5%; /* Place the button at the bottom of the page */
  right: 5%; /* Place the button 30px from the right */ /* Make sure it does not overlap */
  border: none; /* Remove borders */
  outline: none; /* Remove outline */
  background-color: red; /* Set a background color */
  color: white; /* Text color */
  cursor: pointer; /* Add a mouse pointer on hover */
  padding: 15px; /* Some padding */
  border-radius: 30px; /* Rounded corners */
  font-size: 18px; /* Increase font size */
}

#downBtn:hover {
  background-color: #555; /* Add a dark-grey background on hover */
}

.hazir-map {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
}

.leaflet-container {
  font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
}

#root {
  min-height: 100vh;
}

.paper-button {
  text-transform: none;
}

.leaflet-popup-content p {
  margin: 0px;
}

.leaflet-popup-content-wrapper,
.leaflet-popup-tip {
  width: 420px;
  background: white;
  color: #333;
  box-shadow: 0 3px 14px rgb(0 0 0 / 40%);
}

/* Bu kısmı eklemeyi unutmayın class adınıza göre değiştirebilirsinizz ancak MapContainera height ve width vermezseniz göremezsiniz*/
/* Bu kısmı eklemeyi unutmayın class adınıza göre değiştirebilirsinizz ancak MapContainera height ve width vermezseniz göremezsiniz*/
@media screen and (min-width: 300px) {
}

@media screen and (min-width: 576px) {
}

@media screen and (min-width: 768px) {
  .hazir-map {
    width: calc(100% - 12rem);
    border-radius: 15px;
  }
}

@media screen and (min-width: 992px) {
}

@media screen and (min-width: 1200px) {
}

@media screen and (min-width: 1900px) {
}

@media screen and (max-width: 1900px) {
}

@media screen and (max-width: 1200px) {
}

@media screen and (max-width: 993px) {
}

@media screen and (max-width: 768px) {
  .leaflet-popup-content {
    width: 100% !important;
    display: flex;
  }

  .leaflet-popup-content-wrapper {
    max-width: 95vw !important;
    display: flex !important;
  }
}

@media screen and (max-width: 576px) {
}

@media screen and (max-width: 300px) {
  /*  Günümüzde yaygın olmasa da kol ekranları gibi minik ekranlar alanı */
}

@media screen and (min-width: 300px) and (max-width: 576px) {
}

@media screen and (min-width: 576px) and (max-width: 768px) {
}

@media screen and (min-width: 768px) and (max-width: 992px) {
}

@media screen and (min-width: 992px) and (max-width: 1200px) {
}

@media screen and (min-width: 1200px) and (max-width: 1900px) {
}

/* spinner */
.loading-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.lds-ring {
  display: inline-block;
  position: relative;
  width: 80px;
  height: 80px;
}

.lds-ring div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  width: 64px;
  height: 64px;
  margin: 8px;
  border: 8px solid #fff;
  border-radius: 50%;
  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  border-color: #fff transparent transparent transparent;
}

.lds-ring div:nth-child(1) {
  animation-delay: -0.45s;
}

.lds-ring div:nth-child(2) {
  animation-delay: -0.3s;
}

.lds-ring div:nth-child(3) {
  animation-delay: -0.15s;
}

@keyframes lds-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.fullscreen-img {
  width: 30px;
  height: 30px;
  pointer-events: auto;
  cursor: pointer;
}

